# arduino_ros_bridge

./: README.md
arduino_sketchbook/arduino_controler/: arduinoNode.ino
arduino_sketchbook/libraries/ros_lib/arduino_controler/: analog_read_msg.h  analog_write.h  pin_Mode.h
arduino_sketchbook/libraries/ros_lib/arduino_pkg/: command_msg.h
arduino_sketchbook/libraries/ros_lib/arraychk/: arr.h
arduino_sketchbook/libraries/ros_lib/speech_pkg/: mode_srv.h
catkin_pkg/arduino_controler/: CMakeLists.txt  package.xml
catkin_pkg/arduino_controler/firmware/: CMakeLists.txt  arduinoNode.cpp
catkin_pkg/arduino_controler/msg/: analog_read_msg.msg
catkin_pkg/arduino_controler/srv/: analog_read.srv  analog_write.srv  pin_Mode.srv
